# gui4gmns

./: .gitignore  LICENSE  NAMING.md  README.md  REFACTOR_PLAN.md  SHARED_CONTRACT.md  nexta_x.html  pyproject.toml  validate_no_private_data.py
.github/workflows/: publish-testpypi.yml  (+1 more)
adapters/: semidynamic_trajectories.py
ai-gen/: LEARNINGS_FROM_PLOT4GMNS.md  VIZ_SCHEMA.md  gui4gmns.py
datasets/: README.md
desktop-qt/: README.md  nexta_qt.py
docs/: 2_NeXTA_Visualization.pptx  3D_TMC_PLAYBOOK.md  3D_VISUALIZATION.md  DATASETS_COVERAGE.md  FINAL_REVIEW.md  GMNS_TO_DASHBOARD_SKILL.md  NeXTA-X_Users_Guide.md  PACKAGE.md  RELEASING.md  REVIEW_FABLE5.md  ROADMAP.md  STAKEHOLDER_REVIEW.md  TRB_VIZ_REVIEW.md  VISUALIZATION_PORTALS.md  VIZ_LANDSCAPE_REVIEW.md  gallery.html  gui4gmns_Users_Guide.md  index.html
exporters/: README.md  gmns_to_viz.py
python-lab/: README.md
qa/: AI_GUIDE_gui4gmns.md  CHECKPOINT_L_DEFECT_INJECTION.md  FIXES_2026-07-07.md  TEST_PLAN.md  qa_report.html  qa_state.json  verify_output.py  verify_sci_panel.js  verify_semidynamic.py
qgis-plugin/: README.md
renderers/: bottleneck_pems.py  build_dashboards.py  build_gallery.py  build_template_gallery.py  city_montage.py  gmns_3d.py  gmns_3d_time.py  gmns_figures.py  kepler_demo.py  moe_static.py  network_thumb.py  p4g_export_all.py  pems_bayarea.py
templates/: GTFS_Digital_Twin_Dashboard (7) (3).html  Part1_speaker_notes.md  apache_compare_simulation.html  gmns_dashboard_05_odme_calibration.html  problem7_visual_dashboard.html
web-gl/: README.md  nexta_xgl.html
web-lite/: README.md
(+222 files in other folders)
