[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gui4gmns"
version = "0.1.0"
description = "gui4gmns (NeXTA-X) — AI-guided dashboards for GMNS: DTALite / TAPLite / Dynamic ODME / DLSim, GMNS folder in, self-contained dashboard out"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ASU Trans+AI Lab" }]
keywords = ["GMNS", "traffic", "visualization", "DTALite", "DLSim", "ODME", "AMS", "QVDF"]
dependencies = []                       # core generator is pure-Python stdlib

[project.optional-dependencies]
geo = ["pyproj>=3"]                      # projected coords (e.g. state-plane) -> lon/lat basemaps
desktop = ["PySide6>=6"]                # desktop-qt viewer + headless snapshot renderer

[project.scripts]
gui4gmns = "gui4gmns:main"

[project.urls]
Homepage = "https://github.com/asu-trans-ai-lab/gui4gmns"

[tool.setuptools]
py-modules = ["gui4gmns"]

[tool.setuptools.package-dir]
"" = "ai-gen"                            # the core generator lives in ai-gen/gui4gmns.py
